--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,5 @@
 @import './partials/typography', 'partials/mediaQueries', 'partials/colors',
-  './partials/buttons';
+  './partials/buttons', './partials/inputs';
 
 body,
 * {
