--- a/src/partials/_buttons.scss
+++ b/src/partials/_buttons.scss
@@ -1,17 +1,23 @@
-.btn {
+@mixin button {
   font-size: 16px;
   line-height: 25px;
-  font-weight: 800;
+  font-weight: 700;
   color: white;
   border-radius: 25px;
-  padding: 10px 32.5px;
+  padding: 10px 40px;
   border: none;
+  font-family: 'Poppins';
+  cursor: pointer;
+}
 
+.btn {
   &-primary {
+    @include button;
     background: $Primary;
   }
 
   &-secondary {
+    @include button;
     border: 2px solid $Primary;
     background: white;
     color: $Primary;
@@ -19,14 +25,24 @@
   }
 
   &-tertiary {
+    @include button;
     background: $Complementary;
   }
 
   &-gradient {
+    @include button;
     background: radial-gradient(
       100% 1396.4% at 100% 50%,
       $GradientBlue 0%,
       $GradientGreen 100%
     );
+  }
+
+  &-nav {
+    @include button;
+    font-weight: 400;
+    color: $Black;
+    background: white;
+    padding: 10px 16px;
   }
 }
