--- a/src/partials/_typography.scss
+++ b/src/partials/_typography.scss
@@ -1,8 +1,8 @@
-@import './colors.scss';
+@import './colors';
 
 @font-face {
   font-family: 'Josefin Sans';
-  font-weight: 200;
+  font-weight: 300;
   src: url('../assets/fonts/JosefinSans-Light.ttf');
 }
 
@@ -14,43 +14,55 @@
 
 @font-face {
   font-family: 'Josefin Sans';
-  font-weight: 600;
+  font-weight: 500;
   src: url('../assets/fonts/JosefinSans-Medium.ttf');
 }
 
 @font-face {
   font-family: 'Josefin Sans';
-  font-weight: 800;
+  font-weight: 700;
   src: url('../assets/fonts/JosefinSans-Bold.ttf');
 }
 
 @font-face {
   font-family: 'Playfair Display';
-  font-weight: 800;
+  font-weight: 700;
   src: url('../assets/fonts/PlayfairDisplay-Bold.ttf');
 }
 
+@font-face {
+  font-family: 'Poppins';
+  font-weight: 400;
+  src: url('../assets/fonts/Poppins-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Poppins';
+  font-weight: 700;
+  src: url('../assets/fonts/Poppins-Bold.ttf');
+}
+
 h1 {
-  font-family: 'Playfair Display', serif;
-  font-weight: 800;
+  font-weight: 700;
   font-size: 64px;
   line-height: 96px;
-  color: $DarkGrey;
+  color: $PrimaryDark;
 }
 
 h2 {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 36px;
   line-height: 52px;
 }
 
 h3 {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 28px;
   line-height: 44px;
 }
 
 h4 {
+  font-family: 'Josefin Sans';
   font-weight: 400;
   font-size: 20px;
   line-height: 36px;
