--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -7,8 +7,17 @@
   width: 125px;
   margin: 1.5rem 2rem;
 
+  @include mobile {
+    width: 100vw;
+    text-align: center;
+  }
+
   &-image {
     margin-bottom: 1rem;
     height: 6rem;
+
+    @include mobile {
+      height: 4rem;
+    }
   }
 }
