--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,6 +11,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 1;
 
   @include desktop {
     @include desktopPaddingLR;
@@ -29,9 +30,4 @@
   &-wrap {
     margin-left: 1rem;
   }
-}
-
-.logo {
-  height: 3rem;
-  cursor: pointer;
 }
