--- a/src/pages/Home/components/Intro/Intro.scss
+++ b/src/pages/Home/components/Intro/Intro.scss
@@ -1,11 +1,15 @@
-@import '../../../main.scss';
+@import '../../../../main.scss';
 
 .intro {
   display: flex;
   justify-content: center;
-  padding: 12rem 0;
+  padding: 10rem 0;
 
   flex-flow: row wrap-reverse;
+
+  @include mobile {
+    padding: 7rem 1rem;
+  }
 
   &-message {
     width: 50vw;
@@ -17,5 +21,14 @@
   &-image {
     margin: 0 2rem;
     max-height: 200px;
+
+    @include mobile {
+      height: 150px;
+      margin-bottom: 1rem;
+    }
+  }
+
+  &-title {
+    margin-bottom: 1rem;
   }
 }
