--- a/src/partials/_typography.scss
+++ b/src/partials/_typography.scss
@@ -1,4 +1,4 @@
-@import './colors';
+@import './colors', './mediaQueries';
 
 @font-face {
   font-family: 'Josefin Sans';
@@ -44,9 +44,17 @@
 
 h1 {
   font-weight: 700;
-  font-size: 64px;
+  font-size: 50px;
   line-height: 96px;
   color: $PrimaryDark;
+
+  @include tablet {
+    font-size: 40px;
+  }
+
+  @include mobile {
+    line-height: 4rem;
+  }
 }
 
 h2 {
@@ -59,6 +67,10 @@ h3 {
   font-weight: 500;
   font-size: 28px;
   line-height: 44px;
+
+  @include tablet {
+    font-size: 22px;
+  }
 }
 
 h4 {
@@ -66,4 +78,12 @@ h4 {
   font-weight: 400;
   font-size: 20px;
   line-height: 36px;
+
+  @include tablet {
+    font-size: 17px;
+  }
+
+  @include mobile {
+    line-height: 2.5rem;
+  }
 }
