--- a/src/components/CardWithBorder/CardWithBorder.scss
+++ b/src/components/CardWithBorder/CardWithBorder.scss
@@ -11,9 +11,12 @@
   overflow: hidden;
   padding: 3rem 2rem;
   border-radius: 20px;
+  position: relative;
 
   &:focus-within {
     height: fit-content;
+    background-color: $PrimaryLight;
+    transition: all 0.5s ease-in-out;
   }
 
   &-button {
@@ -31,14 +34,23 @@
     font-size: 18px;
     line-height: 1.75rem;
     text-align: center;
+
+    @include mobile {
+      font-size: 16px;
+    }
   }
 
   &-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     min-height: 9rem;
-    // background: pink;
+  }
+
+  &-expand {
+    position: absolute;
+    bottom: 1rem;
+    left: 45%;
   }
 }
