--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,26 +1,50 @@
 @import '../../main.scss';
 
 .header {
-  @include desktopXLPaddingLR;
-  width: 100%;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: white;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
+  &-container {
+    @include desktopXLPaddingLR;
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 
-  @include desktop {
-    @include desktopPaddingLR;
+    @include desktop {
+      @include desktopPaddingLR;
+    }
+  }
+
+  &-hamburger {
+    display: none;
+
+    @include tablet {
+      display: initial;
+      margin-right: 1rem;
+    }
+  }
+
+  &-dropdown {
+    width: 100vw;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(255, 255, 255, 0.95);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 10rem;
+    z-index: 1;
   }
 }
 
 .button {
   &-container {
     display: flex;
+    align-items: center;
 
     @include tablet {
       display: none;
@@ -29,5 +53,16 @@
 
   &-wrap {
     margin-left: 1rem;
+    display: flex;
+    justify-content: center;
+
+    @include tablet {
+      margin-top: 1rem;
+      margin-left: 0;
+    }
   }
+}
+
+.hidden {
+  display: none;
 }
