--- a/src/pages/Home/components/Hero/Hero.scss
+++ b/src/pages/Home/components/Hero/Hero.scss
@@ -11,18 +11,53 @@
   margin-top: 5rem;
   flex-direction: column;
 
-  &-message {
-    text-align: center;
+  @include mobile {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
-  &-input-container {
-    margin-bottom: 1.5rem;
+  &-message {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    @include mobile {
+      padding: 0 1rem;
+    }
+  }
+
+  &-input-container {
+    margin: 1.5rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50vw;
+    max-width: 400px;
+    min-width: 200px;
+  }
+
+  &-title {
+    @include mobile {
+      margin-bottom: 1rem;
+    }
   }
 
   &-image {
-    width: 50vw;
+    width: 60vw;
+
+    @include tablet {
+      width: 90vw;
+    }
+
+    @include mobile {
+      height: 170px;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+
+  &-button {
+    margin-top: 1rem;
   }
 }
