--- a/src/pages/Home/components/HowWeDoIt/HowWeDoIt.scss
+++ b/src/pages/Home/components/HowWeDoIt/HowWeDoIt.scss
@@ -6,6 +6,10 @@
   align-items: center;
   flex-direction: column;
   width: 100vw;
+
+  @include mobile {
+    padding: 6rem 1rem 2rem;
+  }
 }
 
 .HWDI {
@@ -18,5 +22,9 @@
 
   &-title {
     margin-bottom: 4rem;
+
+    @include mobile {
+      margin-bottom: 1.5rem;
+    }
   }
 }
