--- a/src/pages/Home/components/Intro/Intro.scss
+++ b/src/pages/Home/components/Intro/Intro.scss
@@ -8,7 +8,7 @@
   flex-flow: row wrap-reverse;
 
   @include mobile {
-    padding: 7rem 1rem;
+    padding: 5rem 1rem;
   }
 
   &-message {
@@ -16,6 +16,11 @@
     max-width: 420px;
     margin: 0 3rem;
     min-width: 322px;
+
+    @include mobile {
+      width: 100%;
+      padding: 0 1.5rem;
+    }
   }
 
   &-image {
