--- a/src/pages/Home/components/WhatWeOffer/WhatWeOffer.scss
+++ b/src/pages/Home/components/WhatWeOffer/WhatWeOffer.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6.5rem 12rem;
+  padding: 5rem 12rem;
   width: 100vw;
 
   @include tablet {
@@ -12,7 +12,7 @@
   }
 
   @include mobile {
-    padding: 2rem 1rem;
+    padding: 1.5rem 1rem;
   }
 
   &-cards {
@@ -20,7 +20,11 @@
     margin-top: 2.5rem;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: center;
+
+    @include mobile {
+      margin-top: 1.5rem;
+    }
   }
 
   &-title {
