--- a/src/partials/_typography.scss
+++ b/src/partials/_typography.scss
@@ -53,7 +53,8 @@ h1 {
   }
 
   @include mobile {
-    line-height: 4rem;
+    line-height: 3rem;
+    font-size: 30px;
   }
 }
 
@@ -84,6 +85,7 @@ h4 {
   }
 
   @include mobile {
-    line-height: 2.5rem;
+    line-height: 2rem;
+    font-size: 15px;
   }
 }
