--- a/src/pages/Home/components/Hero/Hero.scss
+++ b/src/pages/Home/components/Hero/Hero.scss
@@ -1,10 +1,14 @@
 @import '../../../../main.scss';
 
 .hero {
-  padding: 4.5rem 0;
+  padding: 8rem 0 13rem;
   @include desktopXLPaddingLR;
-  background: #e4f1f2;
-  width: 100%;
+  background-image: url('../../../../assets/images/hero-bg.svg');
+  background-color: #dee8e9;
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,6 +18,7 @@
   @include mobile {
     padding-left: 1rem;
     padding-right: 1rem;
+    background: #dee8e9;
   }
 
   &-message {
