--- a/src/components/EmployeeCard/EmployeeCard.scss
+++ b/src/components/EmployeeCard/EmployeeCard.scss
@@ -13,8 +13,18 @@
     width: 200px;
   }
 
+  @include mobile {
+    width: 100vw;
+  }
+
   &-image {
     margin-bottom: 1rem;
     height: 8rem;
+  }
+
+  &-secondary {
+    @include mobile {
+      width: 150px;
+    }
   }
 }
