--- a/src/pages/Home/components/Contact/Contact.scss
+++ b/src/pages/Home/components/Contact/Contact.scss
@@ -1,6 +1,6 @@
 @import '../../../../main.scss';
 
-.CTA {
+.contact {
   padding: 7rem 0;
   width: 100vw;
   display: flex;
@@ -42,11 +42,12 @@
   &-input-container {
     display: flex;
     width: 100%;
-    margin-top: 1.5rem;
+    margin: 1.5rem 0;
     column-gap: 1rem;
 
     @include mobile {
       flex-wrap: wrap;
+      margin-bottom: 0;
     }
   }
 
