--- a/src/partials/_typography.scss
+++ b/src/partials/_typography.scss
@@ -89,3 +89,19 @@ h4 {
     font-size: 15px;
   }
 }
+
+h5 {
+  font-family: 'Josefin Sans';
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 36px;
+
+  @include tablet {
+    font-size: 15px;
+  }
+
+  @include mobile {
+    line-height: 2rem;
+    font-size: 12px;
+  }
+}
